--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,19 @@ server {
     proxy_set_header X-Scheme $scheme;
   }
 
+  location /ws/ {
+        proxy_pass http://app_server;  # Update to match your service name
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket specific headers
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
   location /static/ {
     autoindex off;
     alias /app/static/;
