--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,69 @@
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==24.4.2
+Automat==22.10.0
 certifi==2024.6.2
 cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
+click==8.1.7
+constantly==23.10.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==42.0.8
+daphne==4.1.2
 defusedxml==0.8.0rc2
 Django==5.0.6
 django-allauth==0.63.6
 django-environ==0.11.2
+django-eventstream==5.3.0
+django-grip==3.5.0
 django-oauth-toolkit==2.4.0
 django-rest-framework-social-oauth2==1.2.0
 django-templated-mail==1.1.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.3
+gevent==24.2.1
+greenlet==3.0.3
+gripcontrol==4.2.0
 gunicorn==20.0.4
+h11==0.14.0
+hyperlink==21.0.0
 idna==3.7
+incremental==24.7.2
 itypes==1.2.0
 Jinja2==3.1.4
 jwcrypto==1.5.6
 MarkupSafe==2.1.5
+msgpack==1.0.8
 oauthlib==3.2.2
 psycopg2-binary==2.9.9
+pubcontrol==3.5.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.2.1
 python3-openid==3.2.0
 pytz==2024.1
+redis==5.0.8
 requests==2.32.3
 requests-oauthlib==2.0.0
+service-identity==24.1.0
 six==1.16.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.0
+tomli==2.0.1
+Twisted==24.3.0
+txaio==23.1.1
 typing_extensions==4.12.1
 uritemplate==4.1.1
 urllib3==2.2.1
+uvicorn==0.30.5
+Werkzeug==3.0.3
+zope.event==5.0
+zope.interface==6.4.post2
